--- a/src/Myriad/Myriad.fsproj
+++ b/src/Myriad/Myriad.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>net6.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>net9.0</TargetFramework>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>myriad</ToolCommandName>
     <Description>Myriad CLI tool</Description>
