Attempt to use multiple frameworks

--- a/src/Myriad.Core/Myriad.Core.fsproj
+++ b/src/Myriad.Core/Myriad.Core.fsproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net8.0;net6.0</TargetFrameworks>
     <Description>Core Myriad library used for developing plugins</Description>
     <DebugType>embedded</DebugType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
