--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,7 +8,7 @@
         <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">0.8.3</VersionPrefix>
         <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)$(VersionSuffix)</Version>
         <!-- pack stuff -->
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net9.0;net8.0;net6.0</TargetFrameworks>
         <Authors>7sharp9</Authors>
         <PackageProjectUrl>$(GitUrl)</PackageProjectUrl>
         <PackageTags>fsharp;codegen;generation;metaprogramming</PackageTags>
