--- a/src/Myriad.Plugins/Myriad.Plugins.fsproj
+++ b/src/Myriad.Plugins/Myriad.Plugins.fsproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net8.0;net6.0</TargetFrameworks>
     <Description>Set of built-in Myriad plugins</Description>
     <DebugType>embedded</DebugType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
