--- a/src/Myriad/Myriad.fsproj
+++ b/src/Myriad/Myriad.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFrameworks>net9.0;net8.0;net6.0</TargetFrameworks>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>myriad</ToolCommandName>
     <Description>Myriad CLI tool</Description>
