--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,9 +5,10 @@
         <GitHome>https://github.com/$(gitOwner)</GitHome>
         <GitUrl>$(gitHome)/$(gitName)</GitUrl>
         <NupkgsDir>$([System.IO.Path]::GetFullPath("$(MSBuildThisFileDirectory)/bin/nupkg"))</NupkgsDir>
-        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">0.8.3</VersionPrefix>
+        <VersionPrefix Condition=" '$(VersionPrefix)' == '' ">0.8.4-tdesu-fix-5</VersionPrefix>
         <Version Condition=" '$(Version)' == '' ">$(VersionPrefix)$(VersionSuffix)</Version>
         <!-- pack stuff -->
+        <TargetFramework>netstandard2.0</TargetFramework>
         <Authors>7sharp9</Authors>
         <PackageProjectUrl>$(GitUrl)</PackageProjectUrl>
         <PackageTags>fsharp;codegen;generation;metaprogramming</PackageTags>
