--- a/src/Myriad/Myriad.fsproj
+++ b/src/Myriad/Myriad.fsproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
     <OutputType>Exe</OutputType>
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>myriad</ToolCommandName>
@@ -18,5 +19,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Myriad.Core\Myriad.Core.fsproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Update="Tomlyn" Version="0.18.0" />
   </ItemGroup>
 </Project>
