--- a/test/Myriad.Plugins.Example1/Myriad.Plugins.Example1.fsproj
+++ b/test/Myriad.Plugins.Example1/Myriad.Plugins.Example1.fsproj
@@ -2,6 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <IsPackable>false</IsPackable>
+    <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Library.fs" />
